--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "chatbeta",
   "version": "0.1.0",
-  "homepage": "https://MarcAMOO2.github.io/chatroom",
-  "private": true,
+  "homepage": "/home",
+  "private": false,
   "dependencies": {
     "@chakra-ui/react": "^2.6.0",
-    "@emotion/react": "^11.10.8",
-    "@emotion/styled": "^11.10.8",
-    "@mui/material": "^5.12.2",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.0",
     "@supabase/supabase-js": "^2.21.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
